--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,22 @@
   <title>The Aura Elite Events</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Aura Elite Events is Pondicherry’s #1 premium event management company, delivering creative, seamless and unforgettable experiences across Tamil Nadu and Puducherry. We handle weddings, corporate events, brand launches, birthdays, cultural shows and more with precision and style.">
+
+<!-- Keywords (SEO) -->
+<meta name="keywords" content="Aura Elite Events, event management Pondicherry, wedding planner Pondicherry, corporate events Tamil Nadu, event organizers Puducherry, premium events, brand launch events, cultural shows">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Aura Elite Events – Pondicherry’s #1 Premium Event Company">
+<meta property="og:description" content="We create memorable events with seamless execution — weddings, corporate meets, brand launches, birthdays, cultural shows and more. 100+ events delivered across Tamil Nadu & Puducherry.">
+<!-- <meta property="og:image" content="https://yourdomain.com/assets/images/share.jpg">
+<meta property="og:url" content="https://yourdomain.com/"> -->
+<meta property="og:type" content="website">
+
+<!-- WhatsApp Preview (uses OG tags, but keeping a fallback) -->
+<meta property="og:site_name" content="Aura Elite Events">
+<meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/x-icon" href="assets/images/fav.png">
 </head>
 <body>
